--- a/Web_app/HomePage/home.css
+++ b/Web_app/HomePage/home.css
@@ -4,8 +4,37 @@
 }
 
 body {
-	background: #ccc;
-	padding: 20px;
+	resize: 		  	both;
+	background-color: 	#f1f1f1;
+	text-align: 	  	center;
+}
+
+body::-webkit-scrollbar {
+    display: none;
+}
+
+/* Hide scrollbar for IE and Edge */
+body {
+    -ms-overflow-style: none;
+}
+
+/* The navigation bar */
+.navbar {
+	vertical-align: 	text-top;
+	text-align: 	  	center;
+	overflow: 			hidden;
+	background-color: 	#C0C0C0;
+	position: 			fixed; /* Set the navbar to fixed position */
+	top: 				0; /* Position the navbar at the top of the page */
+	width: 				99vw; /* Full width */
+	height:				10%;
+	border-radius: 		25px;
+	z-index: 			999;
+}
+
+/* Main content */
+.main {
+	margin-top: 		10%; /* Add a top margin to avoid content overlay */
 }
 
 .scaleable-design {
@@ -17,7 +46,7 @@ body {
 	left: 			  50%;
 	transform: 		  translate(-50%, 0%);
 	transform-origin: center center;
-	height: 		  75%;
+	height: 		  100%;
 }
 
 .scaleable-wrapper {
@@ -26,6 +55,7 @@ body {
 	position: 	relative;
 	background: #666;
 	height: 	100%;
+	z-index: 	99;
 }
 
 table.a {
@@ -52,9 +82,6 @@ nav{
 	background-image: linear-gradient(to bottom, rgba(255,0,0,1), rgba(255,0,0,.3)); /* Standard syntax (must be last) */
 }
 
-body{
-	overflow-y: auto;
-}
 
 ul{
 	list-style: none;
@@ -79,18 +106,6 @@ thead{
 }
 
 #table_content2
-{
-	width: 			90%;
-	resize: 		both;
-	position: 		relative;
-	white-space: 	wrap;
-	overflow-x: 	scroll;
-	overflow-y: 	scroll;
-	display: 		table;
-	font-weight: 	bold;
-}
-
-#table_content3
 {
 	width: 			90%;
 	resize: 		both;
@@ -127,7 +142,7 @@ a{
 
 h1{
 	font-family: 	bubble;
-	font-size: 		500%;
+	font-size: 		225%;
 	opacity: 		1;
 }
 
@@ -139,14 +154,17 @@ h2{
 
 h3{
 	font-family: 	"Times New Roman", Times, serif;
-	font-style: 	bold;
+	font-size: 		150%;
+	opacity: 		1;
+}
+
+h4{
+	font-family: 	"Times New Roman", Times, serif;
+	font-weight: 	bold;
 	font-size: 		100%;
 	opacity: 		1;
 }
 
-body{
-	background: #848c8e;
-}
 
 #content{
 	background: 	#343434;
@@ -175,21 +193,9 @@ body{
     -ms-overflow-style: none;
 }
 
-#published-table{
-	padding: 		1%;
-	resize: 		both;
-	position: 		relative;
-	overflow-x: 	hidden;
-	overflow-y: 	hidden;
-	white-space:	nowrap;
-	float: 			none;
-	background: 	#e0d4d3;
-	border-radius: 	25px;
-}
-
 img{
 	margin: 		1%;
-	border-radius: 	20%;
+	border-radius: 	10%;
 	height: 		150px;
 }
 
@@ -214,6 +220,7 @@ img{
 	position: 			center;
 	overflow: 			hidden;
 	background-color: 	#f1f1f1;
+	border-radius: 	25px;
 }
 
 /* Style the buttons inside the tab */
@@ -230,12 +237,14 @@ img{
 
 /* Change background color of buttons on hover */
 .tab button:hover {
-	background-color: #ddd;
+	background-color: 	#ddd;
+	border-radius: 		10px;
 }
 
 /* Create an active/current tablink class */
 .tab button.active {
-	background-color: #ccc;
+	background-color: 	#C0C0C0;
+	border-radius: 		10px;
 }
 
 /* Style the tab content */
@@ -245,8 +254,9 @@ img{
 	padding: 			1%;
 	overflow-y: 		scroll;
 	position: 			relative;
-	height: 			250px;
-	background-color: 	#f1f1f1;
+	height: 			40vh;
+	background-color: 	#C0C0C0;
+	border-radius: 		25px;
 }
 
 .tabcontent::-webkit-scrollbar {
